--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 					}
 
 					if (age > 18) {
-					window.alert('Welcome ♡')
+					window.alert('Welcome!! ♡')
 					}
 
 					if (age = 18) {
-					window.alert('Welcome ♡')
+					window.alert('Welcome! ♡')
 					}
 			 	}
 
