--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 				<div class="container">
 						<label> Age: </label>
-					<input type="text" class="" id="age">
+					<input type="number" class="" id="age">
 				</div> 
 
 			<!-- JS SCRIPT FOR VERIFY AGE -->
